--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,11 +6,25 @@
 
 nav {
   line-height: 48px;
+  min-height: 48px;
   position: fixed;
+  display: flex;
+  gap: 24px;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   padding: 0 24px;
   background-color: #ff851b;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+
+  a {
+    text-decoration: none;
+
+    &[aria-current="page"] {
+      text-decoration: underline;
+    }
+  }
 }
 
 main {
